tests/ui/frontmatter/infostring-comma.stderr
error: invalid infostring for frontmatter
  --> $DIR/infostring-comma.rs:1:4
   |
LL | ---cargo,clippy
   |    ^^^^^^^^^^^^
   |
   = note: frontmatter infostrings must be a single identifier immediately following the opening

error: aborting due to 1 previous error

